--- a/order-presentation/pom.xml
+++ b/order-presentation/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>order-web</artifactId>
+    <artifactId>order-presentation</artifactId>
 
 
     <dependencies>
