--- a/order-starter/pom.xml
+++ b/order-starter/pom.xml
@@ -12,16 +12,38 @@
     <artifactId>order-starter</artifactId>
 
 
+    <properties>
+        <!-- The main class to start by executing java -jar -->
+        <start-class>com.aws.proserve.dip.order.OrderApplication</start-class>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.aws.proserve.dip</groupId>
             <artifactId>order-web</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
