--- a/order-starter/src/main/resources/application.yml
+++ b/order-starter/src/main/resources/application.yml
@@ -3,3 +3,8 @@ server:
 spring:
   application:
     name: order
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:localhost;DB_CLOSE_ON_EXIT=FALSE
+    username: admin
+    password:
