--- a/order-domain/pom.xml
+++ b/order-domain/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.aws.proserve.dip</groupId>
-        <artifactId>ddd.professional.level3</artifactId>
+        <groupId>com.aws.proserve.mad</groupId>
+        <artifactId>ddd.standard</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -13,9 +13,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.aws.proserve.dip</groupId>
-            <artifactId>proserve-common</artifactId>
+            <groupId>com.aws.proserve.mad</groupId>
+            <artifactId>order-infrastructure</artifactId>
             <version>${order.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
         </dependency>
     </dependencies>
 
