--- a/order-presentation/pom.xml
+++ b/order-presentation/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.aws.proserve.dip</groupId>
-        <artifactId>ddd.professional.level3</artifactId>
+        <groupId>com.aws.proserve.mad</groupId>
+        <artifactId>ddd.standard</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -14,11 +14,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.aws.proserve.dip</groupId>
+            <groupId>com.aws.proserve.mad</groupId>
             <artifactId>order-application</artifactId>
             <version>${order.version}</version>
         </dependency>
