--- a/order-starter/pom.xml
+++ b/order-starter/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.aws.proserve.dip</groupId>
-        <artifactId>ddd.professional.level3</artifactId>
+        <groupId>com.aws.proserve.mad</groupId>
+        <artifactId>ddd.standard</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -14,15 +14,16 @@
 
     <properties>
         <!-- The main class to start by executing java -jar -->
-        <start-class>com.aws.proserve.dip.order.OrderApplication</start-class>
+        <start-class>com.aws.proserve.mad.order.OrderApplication</start-class>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.aws.proserve.dip</groupId>
-            <artifactId>order-web</artifactId>
+            <groupId>com.aws.proserve.mad</groupId>
+            <artifactId>order-presentation</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
     </dependencies>
 
     <dependencyManagement>
