--- a/order-starter/src/main/resources/application.yml
+++ b/order-starter/src/main/resources/application.yml
@@ -1,10 +1,27 @@
 server:
   port: 8080
+  servlet:
+    context-path: /order-service
+
+logging:
+  level:
+    root: INFO
+
 spring:
   application:
-    name: order
-  datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:localhost;DB_CLOSE_ON_EXIT=FALSE
-    username: admin
-    password:
+    name: order-service
+
+
+management:
+  endpoint:
+    metrics:
+      enabled: true
+    prometheus:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: info, health
+  metrics:
+    tags:
+      application: ${HOSTNAME}
