--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>com.aws.proserve.mad</groupId>
-    <artifactId>ddd.standard</artifactId>
+    <artifactId>java-ddd-best-practice</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <modules>
