--- a/order-application/pom.xml
+++ b/order-application/pom.xml
@@ -15,6 +15,11 @@
     <dependencies>
         <dependency>
             <groupId>com.aws.proserve.mad</groupId>
+            <artifactId>order-api</artifactId>
+            <version>${order.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aws.proserve.mad</groupId>
             <artifactId>order-domain</artifactId>
             <version>${order.version}</version>
         </dependency>
@@ -28,7 +33,6 @@
             <artifactId>order-persistence</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
