--- a/order-starter/src/main/resources/application.yml
+++ b/order-starter/src/main/resources/application.yml
@@ -10,7 +10,22 @@ logging:
 spring:
   application:
     name: order-service
-
+  datasource:
+    url: jdbc:h2:./h2db
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: 123456
+  jpa:
+    database: h2
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+  h2:
+    console:
+      path: /h2-console
+      enabled: true
+  flyway:
+    clean-disabled: true
 
 management:
   endpoint:
@@ -25,3 +40,4 @@ management:
   metrics:
     tags:
       application: ${HOSTNAME}
+
